--- a/UI/Views/Permisos/EditarGrupo.cshtml
+++ b/UI/Views/Permisos/EditarGrupo.cshtml
@@ -2,16 +2,17 @@
 @model BE.PerfilFamiliaBE
 
 @{
-    ViewBag.Title = "EditarGrupo";
+    Dictionary<string, BE.IdiomaTraduccionBE> Traducciones = (Dictionary<string, BE.IdiomaTraduccionBE>)Session["Traducciones"];
+    ViewBag.Title = Traducciones["EditarGrupo"].Texto;
 }
 
 <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
     <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
-        <h1 class="h2">Editar Grupo: @Model.Descripcion </h1>
+        <h1 class="h2">@Traducciones["EditarGrupo"].Texto: @Model.Descripcion </h1>
         <div class="btn-toolbar mb-2 mb-md-0">
             <div class="btn-group me-2">
-                <a> @Html.ActionLink("Volver", "GrupoPermisos", null, new { @class = "btn btn-sm btn-outline-secondary", @type = "button" })</a>
-                <button type="button" class="btn btn-sm btn-outline-secondary">Exportar</button>
+                <a> @Html.ActionLink(@Traducciones["Volver"].Texto, "GrupoPermisos", null, new { @class = "btn btn-sm btn-outline-secondary", @type = "button" })</a>
+
             </div>
 
         </div>
@@ -31,21 +32,21 @@
     <div class="row">
         <div class="col-4">
             <div class="input-group mb-3" style="max-width: 400px;">
-                <span class="input-group-text primary" id="basic-addon3">Nombre</span>
+                <span class="input-group-text primary" id="basic-addon3">@Traducciones["Nombre"].Texto</span>
                 @Html.EditorFor(model => model.Descripcion, new { htmlAttributes = new { @class = "form-control" } })
-                <button class="btn btn-outline-secondary" type="submit" id="button-addon2">Guardar</button>
+            <button class="btn btn-outline-secondary" type="submit" id="button-addon2">@Traducciones["Guardar"].Texto</button>
             </div>
 
             <div class="input-group" style="max-width: 400px;">
-                <span class="input-group-text">Grupos</span>
+                <span class="input-group-text">@Traducciones["Grupos"].Texto</span>
                 @Html.DropDownList("Grupos", new SelectList(ViewBag.Familias, "Id", "Descripcion"), new { @class = "form-select", @Id = "GruposSel" })
-                <button class="btn btn-outline-secondary" type="button" onclick="ConfirmAgragarGrupo()">Agregar</button>
+            <button class="btn btn-outline-secondary" type="button" onclick="ConfirmAgragarGrupo()">@Traducciones["Agregar"].Texto</button>
             </div>
             <br />
             <div class="input-group" style="max-width: 400px;">
-                <span class="input-group-text">Permisos</span>
-                @Html.DropDownList("Grupos", new SelectList(ViewBag.Permisos, "Id", "Descripcion"), new { @class = "form-select", @Id = "PermisoSel" })
-                <button class="btn btn-outline-secondary" type="button" onclick="ConfirmAgragarPermiso()">Agregar</button>
+                <span class="input-group-text">@Traducciones["Permisos"].Texto</span>
+                @Html.DropDownList("Permisos", new SelectList(ViewBag.Permisos, "Id", "Descripcion"), new { @class = "form-select", @Id = "PermisoSel" })
+            <button class="btn btn-outline-secondary" type="button" onclick="ConfirmAgragarPermiso()">@Traducciones["Agregar"].Texto</button>
             </div>
             <br />
 
@@ -56,11 +57,9 @@
                 Ya existe una asignación Implísita!
             </div>
 
-        </div>
 
-        <div class="col-4">
             <ul class="list-group" style="max-width: 400px;">
-                <li class="list-group-item active " aria-current="true">Elementos del Grupo:</li>
+                <li class="list-group-item list-group-item-dark " aria-current="true">@Traducciones["ElementosDelGrupo"].Texto</li>
                 @foreach (var item in Model.Hijos)
                 {
                     if (@item.Permiso == null)
