--- a/UI/Views/Permisos/EditarPerfilUsuario.cshtml
+++ b/UI/Views/Permisos/EditarPerfilUsuario.cshtml
@@ -51,18 +51,16 @@
                     </div>
 
 
-                </div>
 
-                <div class="col-4">
                     <ul class="list-group" style="max-width: 400px;">
-                        <li class="list-group-item active " aria-current="true">@Traducciones["PermisosDelUsuario"].Texto</li>
+                        <li class="list-group-item list-group-item-dark" aria-current="true">@Traducciones["PermisosDelUsuario"].Texto</li>
                         @foreach (var item in Model.Permisos)
                         {
                             if (@item.Permiso == null)
                             {
                                 <li class="list-group-item d-flex justify-content-between align-items-start">
                                     <div class="ms-2 me-auto">
-                                        <div class="fw-bold"><i class="fa fa-folder"></i><a href="@Url.Action("EditarGrupo", "Permisos", new {id=item.Id })">&nbsp;@item.Descripcion</a> </div>
+                                        <div class="fw-bold"><i class="fa fa-folder"></i><a href="@Url.Action("EditarGrupo", "Permisos", new {id=item.Id })">&nbsp;&nbsp;@item.Descripcion</a> </div>
                                     </div>
                                     <span class="badge bg-primary rounded-pill">@item.Hijos.Count()</span>&nbsp;&nbsp; <span><a href="#" onclick="ConfirmDelete(@item.Id,'@item.Permiso')"><i class="fa fa-trash"></i></a></span>
                                 </li>
