--- a/UI/Views/Idioma/Delete.cshtml
+++ b/UI/Views/Idioma/Delete.cshtml
@@ -1,15 +1,16 @@
 ﻿@model BE.IdiomaBE
 
 @{
-    ViewBag.Title = "Eliminar Idioma";
+    Dictionary<string, BE.IdiomaTraduccionBE> Traducciones = (Dictionary<string, BE.IdiomaTraduccionBE>)Session["Traducciones"];
+    ViewBag.Title = Traducciones["EliminarIdioma"].Texto;
 }
 <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
     <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
-        <h1 class="h2">Eliminar Idioma @Html.DisplayFor(model => model.Descripcion)</h1>
+        <h1 class="h2">@Traducciones["EliminarIdioma"].Texto @Html.DisplayFor(model => model.Descripcion)</h1>
         <div class="btn-toolbar mb-2 mb-md-0">
             <div class="btn-group me-2">
 
-                <a>@Html.ActionLink("Volver", "Index", null, new { @class = "btn btn-sm btn-outline-secondary", @type = "button" })</a>
+                <a>@Html.ActionLink(@Traducciones["Volver"].Texto, "Index", null, new { @class = "btn btn-sm btn-outline-secondary", @type = "button" })</a>
 
             </div>
 
@@ -28,7 +29,7 @@
                 @Html.DisplayFor(model => model.Id)
             </dd>
             <dt>
-                @Html.DisplayNameFor(model => model.FechaCreacion)
+                @Traducciones["FechaCreacion"].Texto
             </dt>
 
             <dd>
@@ -36,7 +37,7 @@
             </dd>
 
             <dt>
-                @Html.DisplayNameFor(model => model.FechaModificacion)
+                @Traducciones["FechaModificacion"].Texto
             </dt>
 
             <dd>
@@ -44,7 +45,7 @@
             </dd>
 
             <dt>
-                @Html.DisplayNameFor(model => model.Descripcion)
+                @Traducciones["Descripcion"].Texto
             </dt>
 
             <dd>
@@ -52,7 +53,7 @@
             </dd>
 
             <dt>
-                @Html.DisplayNameFor(model => model.PorDefecto)
+                @Traducciones["PorDefecto"].Texto
             </dt>
 
             <dd>
@@ -66,7 +67,7 @@
             @Html.AntiForgeryToken()
 
             <div class="form-actions no-color">
-                <input type="submit" value="Eliminar" class="btn btn-danger" /> 
+                <input type="submit" value="@Traducciones["Eliminar"].Texto" class="btn btn-danger" /> 
 
             </div>
         }
