--- a/UI/Views/Db/Backup.cshtml
+++ b/UI/Views/Db/Backup.cshtml
@@ -4,26 +4,27 @@
 @using X.PagedList.Mvc.Common
 
 @{
-    ViewBag.Title = "Copias de Seguridad";
+    Dictionary<string, BE.IdiomaTraduccionBE> Traducciones = (Dictionary<string, BE.IdiomaTraduccionBE>)Session["Traducciones"];
+    ViewBag.Title = Traducciones["CopiasDeSeguridad"].Texto;
 }
 
 <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
     <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
-        <h1 class="h2">Copias de Seguridad</h1>
+        <h1 class="h2">@Traducciones["CopiasDeSeguridad"].Texto</h1>
         <div class="btn-toolbar mb-2 mb-md-0">
 
             @using (Html.BeginForm())
             {
                 <div class="btn-group me-2">
                     <span>
-                        Buscar @Html.TextBox("Dato_Buscar", ViewBag.ValorFiltro as string, new { @autocomplete = "off", @autofocus = "" })
+                        @Traducciones["Buscar"].Texto @Html.TextBox("Dato_Buscar", ViewBag.ValorFiltro as string, new { @autocomplete = "off", @autofocus = "" })
 
                     </span>
                 </div>
             }
             <div class="btn-group me-2">
-                <a>@Html.ActionLink("Nuevo", "Create", "Db", null, new { @class = "btn btn-sm btn-outline-secondary", @type = "button" })</a>
-                <button type="button" class="btn btn-sm btn-outline-secondary">Exportar</button>
+                <a>@Html.ActionLink(Traducciones["Nuevo"].Texto, "Create", "Db", null, new { @class = "btn btn-sm btn-outline-secondary", @type = "button" })</a>
+                <button type="button" class="btn btn-sm btn-outline-secondary">@Traducciones["Exportar"].Texto</button>
             </div>
 
         </div>
@@ -34,34 +35,34 @@
 
         @if (ViewBag.Resultado != null && ViewBag.Resultado == "Creado")
         {
-            <div class="alert alert-success alert-dismissible fade show" role="alert">
-                <strong>Correcto:</strong> La Copia de Seguridad se creó correctamente
-                <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-            </div>
+        <div class="alert alert-success alert-dismissible fade show" role="alert">
+            <strong>@Traducciones["Correcto"].Texto:</strong> @Traducciones["BackupCreadoCorrectamente"].Texto
+            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+        </div>
         }
         @if (ViewBag.Resultado != null && ViewBag.Resultado == "RestauradoOk")
         {
-            <div class="alert alert-success alert-dismissible fade show" role="alert">
-                <strong>Correcto:</strong> Se restauró la Base de Datos al @ViewBag.Fecha
-                <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-            </div>
+    <div class="alert alert-success alert-dismissible fade show" role="alert">
+        <strong>@Traducciones["Correcto"].Texto:</strong> @Traducciones["BackupRestauradoCorrectamente"].Texto (@ViewBag.Fecha)
+        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+    </div>
         }
 
         @if (ViewBag.Resultado != null && ViewBag.Resultado == "ErrorDv")
         {
-            <div class="alert alert-danger alert-dismissible fade show" role="alert">
-                <strong>Error:</strong> No se pudo crear la Copia de Seguridad, porque la verificación de Dígitos Verificadores entontró inconsistencias. Revice la Bitácora para más información.
-                <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-            </div>
+    <div class="alert alert-danger alert-dismissible fade show" role="alert">
+        <strong>@Traducciones["Error"].Texto:</strong> @Traducciones["BackupErrorEnDv"].Texto
+        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+    </div>
         }
 
         <table class="table table-hover">
             <thead>
                 <tr>
 
-                    <th scope="col">@Html.DisplayNameFor(model => model.First().FechaCreacion)</th>
-                    <th scope="col">@Html.DisplayNameFor(model => model.First().Nombre)</th>
-                    <th scope="col">Acciones</th>
+                    <th scope="col">@Traducciones["FechaCreacion"].Texto</th>
+                    <th scope="col">@Traducciones["Nombre"].Texto</th>
+                    <th scope="col">@Traducciones["Acciones"].Texto</th>
 
 
                 </tr>
@@ -77,7 +78,7 @@
 
                         <td>
 
-                            <a href="@Url.Action("Restaurar", "Db", new { nombre = item.Nombre,creacion=item.FechaCreacion })">Restaurar</a>&ensp;&ensp;
+                            <a href="@Url.Action("Restaurar", "Db", new { nombre = item.Nombre,creacion=item.FechaCreacion })">@Traducciones["Restaurar"].Texto</a>&ensp;&ensp;
                             <a href="#" onclick="Confirmar('@item.Nombre')"><i class="fa fa-trash"></i></a>
 
                         </td>
