--- a/UI/Views/Idioma/Traduccion.cshtml
+++ b/UI/Views/Idioma/Traduccion.cshtml
@@ -4,27 +4,27 @@
 @using X.PagedList.Mvc.Common
 
 @{
-    ViewBag.Title = "Traduccion";
+
+    Dictionary<string, BE.IdiomaTraduccionBE> Traducciones = (Dictionary<string, BE.IdiomaTraduccionBE>)Session["Traducciones"];
+    ViewBag.Title = Traducciones["Traducciones"].Texto;
     var Idioma = Request.Url.Segments[3];
 }
 
-
-
 <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
     <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
-        <h1 class="h2">Traducciones para Idioma @ViewBag.NombreIdioma </h1>
+        <h1 class="h2">@Traducciones["TraduccionesParaIdioma"].Texto @ViewBag.NombreIdioma </h1>
         <div class="btn-toolbar mb-2 mb-md-0">
             @using (Html.BeginForm())
             {
                 <div class="btn-group me-2">
                     <span>
-                        Buscar @Html.TextBox("Dato_Buscar", ViewBag.ValorFiltro as string, new { @autocomplete = "off", @autofocus = "" })
+                        @Traducciones["Buscar"].Texto @Html.TextBox("Dato_Buscar", ViewBag.ValorFiltro as string, new { @autocomplete = "off", @autofocus = "" })
 
                     </span>
                 </div>
             }
             <div class="btn-group me-2">
-                <a>@Html.ActionLink("Volver", "Index", "Idioma", null, new { @class = "btn btn-sm btn-outline-secondary", @type = "button" })</a>
+                <a>@Html.ActionLink(@Traducciones["Volver"].Texto, "Index", "Idioma", null, new { @class = "btn btn-sm btn-outline-secondary", @type = "button" })</a>
             </div>
 
         </div>
@@ -41,15 +41,15 @@
                         @Html.DisplayNameFor(model => model.First().Etiqueta.Id)
                     </th>
                     <th>
-                        Etiqueta
+                        @Traducciones["Etiqueta"].Texto
                     </th>
                     <th>
-                        Traducción
+                        @Traducciones["Traduccion"].Texto
                     </th>
 
             </thead>
 
-       
+
 
             @foreach (var item in Model)
             {
@@ -133,7 +133,11 @@
     </script>
 
 
-
+    <script>
+        $(function () {
+            $('ul.pagination > li > a').addClass('page-link');
+        });
+    </script>
 
 
 }
