Finalización de traducciones

--- a/UI/Views/Db/Create.cshtml
+++ b/UI/Views/Db/Create.cshtml
@@ -1,12 +1,18 @@
 ﻿@model BE.BackupBE
 
+@{
+
+    Dictionary<string, BE.IdiomaTraduccionBE> Traducciones = (Dictionary<string, BE.IdiomaTraduccionBE>)Session["Traducciones"];
+    ViewBag.Title = Traducciones["CrearBackup"].Texto;
+
+}
 
 <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
     <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
-        <h1 class="h2">Nueva Copia de Seguridad</h1>
+        <h1 class="h2">@Traducciones["CrearBackup"].Texto</h1>
         <div class="btn-toolbar mb-2 mb-md-0">
             <div class="btn-group me-2">
-                <a>@Html.ActionLink("Volver", "Backup", "Db", null, new { @class = "btn btn-sm btn-outline-secondary", @type = "button" })</a>
+                <a>@Html.ActionLink(Traducciones["Volver"].Texto, "Backup", "Db", null, new { @class = "btn btn-sm btn-outline-secondary", @type = "button" })</a>
 
             </div>
 
@@ -18,25 +24,25 @@
         {
             @Html.AntiForgeryToken()
 
-        <div class="form-horizontal" style="max-width:400px;">
+            <div class="form-horizontal" style="max-width:400px;">
 
-            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
 
-            <div class="form-group">
-                @Html.LabelFor(model => model.Nombre, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @Html.EditorFor(model => model.Nombre, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.Nombre, "", new { @class = "text-danger" })
+                <div class="form-group">
+                    <label class="control-label col-md-2"> @Traducciones["Nombre"].Texto</label>
+                    <div class="col-md-10">
+                        @Html.EditorFor(model => model.Nombre, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.Nombre, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+                <br />
+                <div class="form-group">
+                    <div class="col-md-offset-2 col-md-10">
+                        <input type="submit" value="@Traducciones["Crear"].Texto" class="btn btn-primary" />
+                    </div>
                 </div>
             </div>
-            <br />
-            <div class="form-group">
-                <div class="col-md-offset-2 col-md-10">
-                    <input type="submit" value="Crear" class="btn btn-primary" />
-                </div>
-            </div>
-        </div>
         }
 
 
