--- a/UI/Views/Db/Integridad.cshtml
+++ b/UI/Views/Db/Integridad.cshtml
@@ -1,11 +1,12 @@
 ﻿
 @{
-    ViewBag.Title = "Verificación de Integridad de Datos";
+    Dictionary<string, BE.IdiomaTraduccionBE> Traducciones = (Dictionary<string, BE.IdiomaTraduccionBE>)Session["Traducciones"];
+    ViewBag.Title = Traducciones["VerificacionIntegridadDB"].Texto;
 }
 
 <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
     <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
-        <h1 class="h2">Verificación de Integridad de DB</h1>
+        <h1 class="h2">@Traducciones["VerificacionIntegridadDB"].Texto</h1>
         <div class="btn-toolbar mb-2 mb-md-0">
 
         </div>
@@ -16,9 +17,9 @@
         <div class="card" style="max-width:500px;">
 
             <div class="card-body">
-                <h5 class="card-title">Ejecutar Análisis</h5>
-                <p class="card-text">Al ejecutar el Análisis de Integridad de la Base de Datos, se comprobará que los datos no hayan sido manipulados por fuera del sistema. Para ello se realizará la verificación de los Dígitos Horizontales y Verticales.</p>
-                <a href="#" class="btn btn-primary" onclick="Confirmar()">Ejecutar</a>
+                <h5 class="card-title">@Traducciones["EjecutarAnalisis"].Texto</h5>
+                <p class="card-text">@Traducciones["LeyendaEjecutarAnalisisDv"].Texto</p>
+                <a href="#" class="btn btn-primary" onclick="Confirmar()">@Traducciones["Ejecutar"].Texto</a>
             </div>
         </div>
         <br />
@@ -28,7 +29,7 @@
                 <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zm-3.97-3.03a.75.75 0 0 0-1.08.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-.01-1.05z" />
             </svg>
             <div>
-                Verificación Exitosa!
+                @Traducciones["VerificacionDvExitosa"].Texto
             </div>
         </div>
 
@@ -37,7 +38,7 @@
                 <path d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z" />
             </svg>
             <div>
-                Se encontraron errores en la verificación, consulte la Bitacora para ver los resultados del análisis.
+                @Traducciones["VerificacionDvFallo"].Texto
             </div>
         </div>
 
@@ -51,15 +52,15 @@
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">Ejecutar Análisis </h5>
+                <h5 class="modal-title" id="exampleModalLabel">@Traducciones["EjecutarAnalisis"].Texto</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
-                Está seguro que desea ejecutar el Analisis de Integridad de Datos?
+                @Traducciones["ConfirmarEjecutarAnalisisDv"].Texto
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
-                <button type="button" class="btn btn-primary" onclick="Ejecutar()">Confirmar</button>
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal"> @Traducciones["Cancelar"].Texto</button>
+                <button type="button" class="btn btn-primary" onclick="Ejecutar()"> @Traducciones["Confirmar"].Texto</button>
             </div>
         </div>
     </div>
