--- a/UI/Views/Bitacora/Index.cshtml
+++ b/UI/Views/Bitacora/Index.cshtml
@@ -3,12 +3,17 @@
 @using X.PagedList.Mvc
 @using X.PagedList.Mvc.Common
 
+@{
 
+    Dictionary<string, BE.IdiomaTraduccionBE> Traducciones = (Dictionary<string, BE.IdiomaTraduccionBE>)Session["Traducciones"];
+    ViewBag.Title = Traducciones["Bitacora"].Texto;
+
+}
 
 
 <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
     <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
-        <h1 class="h2">Bitácora</h1>
+        <h1 class="h2">@Traducciones["Bitacora"].Texto</h1>
         <div class="btn-toolbar mb-2 mb-md-0">
 
         </div>
@@ -19,9 +24,9 @@
             <thead>
                 <tr>
                     <th scope="col">Id</th>
-                    <th scope="col">Fecha</th>
-                    <th scope="col">Detalle</th>
-                    <th scope="col">Usuario</th>
+                    <th scope="col">@Traducciones["Fecha"].Texto</th>
+                    <th scope="col">@Traducciones["Detalle"].Texto</th>
+                    <th scope="col">@Traducciones["Usuario"].Texto</th>
 
 
                 </tr>
