--- a/UI/Views/Home/Index.cshtml
+++ b/UI/Views/Home/Index.cshtml
@@ -1,13 +1,13 @@
 ﻿@{
-    ViewBag.Title = "Dashboard";
+    Dictionary<string, BE.IdiomaTraduccionBE> Traducciones = (Dictionary<string, BE.IdiomaTraduccionBE>)Session["Traducciones"];
+    ViewBag.Title = Traducciones["Inicio"].Texto;
 }
-
 
 <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
     <div class="container-fluid">
 
         <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
-            <h1 class="h3 mb-0 text-gray-800">Dashboard</h1>
+            <h1 class="h3 mb-0 text-gray-800">@Traducciones["Dashboard"].Texto</h1>
             <div class="btn-toolbar mb-2 mb-md-0">
 
             </div>
@@ -15,80 +15,71 @@
 
 
 
-        <!-- Content Row -->
+        <!-- Contenido Row -->
         <div class="row">
 
-            <!-- Earnings (Monthly) Card Example -->
+            <!-- Dispostivos  -->
             <div class="col-xl-3 col-md-6 mb-4">
-                <div class="card border-left-primary shadow h-100 py-2">
+                <div class="shadow h-100 py-2" style="border-left: .25rem solid #4e73df !important">
                     <div class="card-body">
                         <div class="row no-gutters align-items-center">
                             <div class="col mr-2">
-                                <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">Dispositivos</div>
+                                <div class="text-xs font-weight-bold text-primary text-uppercase mb-1"><strong>@Traducciones["Dispositivos"].Texto</strong></div>
                                 <div class="h5 mb-0 font-weight-bold text-gray-800">536</div>
                             </div>
                             <div class="col-auto">
-                                <i class="fas fa-calendar fa-2x text-gray-300"></i>
+                                <i class="fa fa-desktop fa-2x" style="color: #dddfeb"></i>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
 
-            <!-- Earnings (Monthly) Card Example -->
+            <!-- Licencias -->
             <div class="col-xl-3 col-md-6 mb-4">
-                <div class="card border-left-success shadow h-100 py-2">
+                <div class="card shadow h-100 py-2" style="border-left: .25rem solid #1cc88a !important">
                     <div class="card-body">
                         <div class="row no-gutters align-items-center">
                             <div class="col mr-2">
-                                <div class="text-xs font-weight-bold text-success text-uppercase mb-1">Licencias</div>
+                                <div class="text-xs font-weight-bold text-success text-uppercase mb-1"><strong>@Traducciones["Licencias"].Texto</strong></div>
                                 <div class="h5 mb-0 font-weight-bold text-gray-800">254</div>
                             </div>
                             <div class="col-auto">
-                                <i class="fas fa-dollar-sign fa-2x text-gray-300"></i>
+                                <i class="fa fa-paperclip fa-2x" style="color: #dddfeb"></i>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
 
-            <!-- Earnings (Monthly) Card Example -->
+            <!-- Colaboradores -->
             <div class="col-xl-3 col-md-6 mb-4">
-                <div class="card border-left-info shadow h-100 py-2">
+                <div class=" shadow h-100 py-2" style="border-left: .25rem solid #36b9cc !important">
                     <div class="card-body">
                         <div class="row no-gutters align-items-center">
                             <div class="col mr-2">
-                                <div class="text-xs font-weight-bold text-info text-uppercase mb-1">Colaboradores</div>
-                                <div class="row no-gutters align-items-center">
-                                    <div class="col-auto">
-                                        <div class="h5 mb-0 mr-3 font-weight-bold text-gray-800">50%</div>
-                                    </div>
-                                    <div class="col">
-                                        <div class="progress progress-sm mr-2">
-                                            <div class="progress-bar bg-info" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
-                                        </div>
-                                    </div>
-                                </div>
+                                <div class="text-xs font-weight-bold text-info text-uppercase mb-1"><strong>@Traducciones["Colaboradores"].Texto</strong></div>
+                                <div class="h5 mb-0 font-weight-bold text-gray-800">114</div>
                             </div>
                             <div class="col-auto">
-                                <i class="fas fa-clipboard-list fa-2x text-gray-300"></i>
+                                <i class="fa fa-user-circle fa-2x" style="color: #dddfeb"></i>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
 
-            <!-- Pending Requests Card Example -->
+            <!-- Departamentos -->
             <div class="col-xl-3 col-md-6 mb-4">
-                <div class="card border-left-warning shadow h-100 py-2">
+                <div class="card  shadow h-100 py-2" style=" border-left: .25rem solid #f6c23e !important">
                     <div class="card-body">
                         <div class="row no-gutters align-items-center">
                             <div class="col mr-2">
-                                <div class="text-xs font-weight-bold text-warning text-uppercase mb-1">Departamentos</div>
+                                <div class="text-xs font-weight-bold text-warning text-uppercase mb-1"><strong>@Traducciones["Departamentos"].Texto</strong></div>
                                 <div class="h5 mb-0 font-weight-bold text-gray-800">18</div>
                             </div>
                             <div class="col-auto">
-                                <i class="fas fa-comments fa-2x text-gray-300"></i>
+                                <i class="fa fa-users fa-2x " style="color: #dddfeb"></i>
                             </div>
                         </div>
                     </div>
@@ -100,24 +91,13 @@
 
         <div class="row">
 
-            <!-- Pie Chart -->
+            <!-- Gráfico de Torta -->
             <div class="col-xl-4 col-lg-5">
                 <div class="card shadow mb-4">
-                    <!-- Card Header - Dropdown -->
+                    <!-- Cabecera -->
                     <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
-                        <h6 class="m-0 font-weight-bold text-primary">Tipos de Dispositivos</h6>
-                        <div class="dropdown no-arrow">
-                            <a class="dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                <i class="fas fa-ellipsis-v fa-sm fa-fw text-gray-400"></i>
-                            </a>
-                            <div class="dropdown-menu dropdown-menu-right shadow animated--fade-in" aria-labelledby="dropdownMenuLink">
-                                <div class="dropdown-header">Dropdown Header:</div>
-                                <a class="dropdown-item" href="#">Action</a>
-                                <a class="dropdown-item" href="#">Another action</a>
-                                <div class="dropdown-divider"></div>
-                                <a class="dropdown-item" href="#">Something else here</a>
-                            </div>
-                        </div>
+                        <h6 class="m-0 font-weight-bold text-primary">@Traducciones["TiposDeDispositivos"].Texto</h6>
+
                     </div>
                     <!-- Card Body -->
                     <div class="card-body">
@@ -126,13 +106,13 @@
                         </div>
                         <div class="mt-4 text-center small">
                             <span class="mr-2">
-                                <i class="fas fa-circle text-primary"></i> PC
+                                <i class="fa fa-circle text-primary"></i> @Traducciones["Pc"].Texto
                             </span>
                             <span class="mr-2">
-                                <i class="fas fa-circle text-success"></i> Notebook
+                                <i class="fa fa-circle text-success"></i> @Traducciones["Notebook"].Texto
                             </span>
                             <span class="mr-2">
-                                <i class="fas fa-circle text-info"></i> Celular
+                                <i class="fa fa-circle text-info"></i> @Traducciones["Celular"].Texto
                             </span>
                         </div>
                     </div>
@@ -144,23 +124,12 @@
                 <div class="card shadow mb-4">
                     <!-- Card Header - Dropdown -->
                     <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
-                        <h6 class="m-0 font-weight-bold text-primary">Earnings Overview</h6>
-                        <div class="dropdown no-arrow">
-                            <a class="dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                <i class="fas fa-ellipsis-v fa-sm fa-fw text-gray-400"></i>
-                            </a>
-                            <div class="dropdown-menu dropdown-menu-right shadow animated--fade-in" aria-labelledby="dropdownMenuLink">
-                                <div class="dropdown-header">Dropdown Header:</div>
-                                <a class="dropdown-item" href="#">Action</a>
-                                <a class="dropdown-item" href="#">Another action</a>
-                                <div class="dropdown-divider"></div>
-                                <a class="dropdown-item" href="#">Something else here</a>
-                            </div>
-                        </div>
+                        <h6 class="m-0 font-weight-bold text-primary">@Traducciones["EvolucionDelPresupuesto"].Texto</h6>
+
                     </div>
                     <!-- Card Body -->
                     <div class="card-body">
-                        <div class="chart-area">
+                        <div class="chart-area" style=" position: relative; height: 14rem; width: 100%">
                             <canvas id="myAreaChart"></canvas>
                         </div>
                     </div>
@@ -179,29 +148,23 @@
                 <!-- Project Card Example -->
                 <div class="card shadow mb-4">
                     <div class="card-header py-3">
-                        <h6 class="m-0 font-weight-bold text-primary">Estado General</h6>
+                        <h6 class="m-0 font-weight-bold text-primary">@Traducciones["EstadoGeneral"].Texto</h6>
                     </div>
                     <div class="card-body">
-                        <h4 class="small font-weight-bold">Activos Asignados <span class="float-right">20%</span></h4>
+                        <h4 class="small font-weight-bold">@Traducciones["ActivosAsignados"].Texto <span class="float-right">80%</span></h4>
                         <div class="progress mb-4">
-                            <div class="progress-bar bg-danger" role="progressbar" style="width: 20%" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100"></div>
+                            <div class="progress-bar bg-danger" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
                         </div>
-                        <h4 class="small font-weight-bold">Licencias Asignadas <span class="float-right">40%</span></h4>
+                        <h4 class="small font-weight-bold">@Traducciones["LicenciasAsignadas"].Texto <span class="float-right">70%</span></h4>
                         <div class="progress mb-4">
-                            <div class="progress-bar bg-warning" role="progressbar" style="width: 40%" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100"></div>
+                            <div class="progress-bar bg-warning" role="progressbar" style="width: 70%" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
                         </div>
-                        <h4 class="small font-weight-bold">Customer Database <span class="float-right">60%</span></h4>
+                        <h4 class="small font-weight-bold">@Traducciones["LicenciasVencidas"].Texto <span class="float-right">10%</span></h4>
                         <div class="progress mb-4">
-                            <div class="progress-bar" role="progressbar" style="width: 60%" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
+                            <div class="progress-bar" role="progressbar" style="width: 10%" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100"></div>
                         </div>
-                        <h4 class="small font-weight-bold">Payout Details <span class="float-right">80%</span></h4>
-                        <div class="progress mb-4">
-                            <div class="progress-bar bg-info" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
-                        </div>
-                        <h4 class="small font-weight-bold">Account Setup <span class="float-right">Complete!</span></h4>
-                        <div class="progress">
-                            <div class="progress-bar bg-success" role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
-                        </div>
+
+
                     </div>
                 </div>
 
